bin_PROGRAMS=tmarlin
tmarlin_SOURCES=src/engine.c src/inode.c src/disp-file.c src/http.c src/config.c src/data.c src/process.c src/play-main.c src/disp-main.c src/disp-util.c src/session.c src/cJSON.c src/db.c src/check.c src/process6.c src/disp-process.c src/scan.c src/log.c src/util.c src/store.c src/main.c src/business.c src/ui.c src/disp-analyze.c src/commpair.c include/config.h include/session.h include/disp-analyze.h include/disp-file.h include/global_define.h include/util.h include/ui.h include/comm.h include/commpair.h include/disp-process.h include/scan.h include/disp-util.h include/log.h
